--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.4.2",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@material-ui/core": "^3.3.2",
+    "@material-ui/icons": "^3.0.1",
+    "@material/image-list": "^0.41.0",
     "axios": "^0.18.0",
     "materialize-css": "^1.0.0",
     "react": "^16.6.0",
@@ -30,5 +32,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {}
 }
