--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "seed": "node scripts/profileQuestionSeed.js && node profileTypeSeed.js",
+    "seed": "node scripts/profileQuestionSeed.js",
     "install": "cd client && yarn install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build",
